--- a/package.json
+++ b/package.json
@@ -75,8 +75,9 @@
       "prettier --write",
       "vue-cli-service lint"
     ],
-    "./src/**/*.{js,jsx,vue}": [
-      "vue-cli-service lint"
+    "./src/**/*.vue": [
+      "eslint lint",
+      "stylelint lint"
     ]
   }
 }
