--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
       "vue-cli-service lint"
     ],
     "./src/**/*.vue": [
-      "eslint lint",
-      "stylelint lint"
+      "vue-cli-service lint"
     ]
   }
 }
