--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash-es": "^4.17.15",
     "nprogress": "^0.2.0",
     "ress": "^2.0.4",
+    "swrv": "^0.7.3",
     "vue": "^2.6.12",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1",
