build: update deps

--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
     "check": "ncu",
     "commit": "git-ze && git push",
-    "dev": "vue-cli-service serve"
+    "lint": "lint:script && lint:style",
+    "lint:script": "vue-cli-service lint",
+    "lint:style": "stylelint ./src/**/*.scss --fix"
   },
   "dependencies": {
+    "@ant-design/colors": "^4.0.5",
+    "@ant-design/icons-svg": "^4.1.0",
+    "@ant-design/icons-vue": "^5.1.5",
+    "@nutui/nutui": "^2.2.10",
     "@vue/composition-api": "^1.0.0-beta.11",
     "axios": "^0.20.0",
     "better-scroll": "^2.0.2",
@@ -20,7 +26,7 @@
     "element-ui-eoi": "^2.14.4",
     "lodash-es": "^4.17.15",
     "nprogress": "^0.2.0",
-    "ress": "^2.0.4",
+    "ress": "^3.0.0",
     "swrv": "^0.7.3",
     "vue": "^2.6.12",
     "vue-router": "^3.4.3",
@@ -32,23 +38,23 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
-    "@modyqyw/eslint-config-vue": "^1.7.3",
-    "@modyqyw/prettier-config": "^1.1.1",
-    "@modyqyw/stylelint-config-scss": "^1.0.18",
+    "@modyqyw/eslint-config-vue": "^1.7.4",
+    "@modyqyw/prettier-config": "^1.1.2",
+    "@modyqyw/stylelint-config-scss": "^1.0.19",
     "@types/lodash-es": "^4.17.3",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.4",
+    "@vue/cli-plugin-eslint": "^4.5.4",
+    "@vue/cli-plugin-router": "^4.5.4",
+    "@vue/cli-plugin-vuex": "^4.5.4",
+    "@vue/cli-service": "^4.5.4",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.1",
     "compression-webpack-plugin": "^5.0.2",
     "eslint": "^7.8.1",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "lint-staged": "^10.3.0",
     "node-sass": "^4.14.1",
-    "npm-check-updates": "^8.1.0",
+    "npm-check-updates": "^8.1.1",
     "prettier": "^2.1.1",
     "sass-loader": "^10.0.2",
     "stylelint": "^13.7.0",
