--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@ant-design/colors": "^4.0.5",
     "@ant-design/icons-svg": "^4.1.0",
-    "@ant-design/icons-vue": "^5.1.5",
+    "@ant-design/icons-vue": "4.0.6",
     "@nutui/nutui": "^2.2.10",
     "@vue/composition-api": "^1.0.0-beta.11",
     "axios": "^0.20.0",
-    "better-scroll": "^2.0.2",
+    "better-scroll": "^2.0.3",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.35",
     "element-ui": "^2.13.2",
@@ -33,20 +33,20 @@
     "vuex": "^3.5.1",
     "vxe-table": "^2.9.19",
     "vxe-table-plugin-element": "^1.9.1",
-    "xe-utils": "^2.7.8"
+    "xe-utils": "^2.7.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
-    "@modyqyw/eslint-config-vue": "^1.7.4",
+    "@modyqyw/eslint-config-vue": "^1.7.5",
     "@modyqyw/prettier-config": "^1.1.2",
-    "@modyqyw/stylelint-config-scss": "^1.0.19",
+    "@modyqyw/stylelint-config-scss": "^1.0.20",
     "@types/lodash-es": "^4.17.3",
-    "@vue/cli-plugin-babel": "^4.5.4",
-    "@vue/cli-plugin-eslint": "^4.5.4",
-    "@vue/cli-plugin-router": "^4.5.4",
-    "@vue/cli-plugin-vuex": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/cli-plugin-router": "^4.5.6",
+    "@vue/cli-plugin-vuex": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.1",
     "compression-webpack-plugin": "^5.0.2",
