build: update deps

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "lint": "lint:script && lint:style",
     "check": "ncu",
     "commit": "git-ze && git push",
-    "lint": "lint:script && lint:style",
+    "dev": "vue-cli-service serve",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "lint:script": "vue-cli-service lint",
     "lint:style": "stylelint ./src/**/*.scss --fix"
   },
@@ -17,30 +18,36 @@
     "@ant-design/icons-svg": "^4.1.0",
     "@ant-design/icons-vue": "4.0.6",
     "@nutui/nutui": "^2.2.10",
-    "@vue/composition-api": "^1.0.0-beta.11",
+    "@vue/composition-api": "^1.0.0-beta.14",
     "axios": "^0.20.0",
     "better-scroll": "^2.0.3",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.35",
+    "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "element-ui-eoi": "^2.14.4",
     "lodash-es": "^4.17.15",
     "nprogress": "^0.2.0",
     "ress": "^3.0.0",
-    "swrv": "^0.7.3",
+    "swrv": "^0.7.4",
     "vue": "^2.6.12",
+    "vue-clipboard2": "^0.3.1",
+    "vue-echarts": "^5.0.0-beta.0",
+    "vue-i18n": "^8.21.1",
     "vue-router": "^3.4.3",
+    "vue-virtual-scroll-list": "^2.3.1",
     "vuex": "^3.5.1",
-    "vxe-table": "^2.9.19",
-    "vxe-table-plugin-element": "^1.9.1",
-    "xe-utils": "^2.7.10"
+    "vxe-table": "^2.9.22",
+    "vxe-table-plugin-element": "^1.9.2",
+    "xe-utils": "^2.7.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
-    "@modyqyw/eslint-config-vue": "^1.7.5",
-    "@modyqyw/prettier-config": "^1.1.2",
-    "@modyqyw/stylelint-config-scss": "^1.0.20",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@intlify/vue-i18n-loader": "^1.0.0",
+    "@modyqyw/eslint-config-vue": "^1.7.6",
+    "@modyqyw/prettier-config": "^1.1.3",
+    "@modyqyw/stylelint-config-scss": "^1.1.0",
     "@types/lodash-es": "^4.17.3",
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
@@ -49,17 +56,18 @@
     "@vue/cli-service": "^4.5.6",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.1",
-    "compression-webpack-plugin": "^5.0.2",
-    "eslint": "^7.8.1",
+    "compression-webpack-plugin": "^6.0.0",
+    "eslint": "^7.9.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.3.0",
     "node-sass": "^4.14.1",
-    "npm-check-updates": "^8.1.1",
-    "prettier": "^2.1.1",
+    "npm-check-updates": "^9.0.1",
+    "prettier": "^2.1.2",
     "sass-loader": "^10.0.2",
-    "stylelint": "^13.7.0",
+    "stylelint": "^13.7.1",
     "stylelint-webpack-plugin": "^2.1.0",
-    "vue-cli-plugin-tailwind": "~1.4.2",
+    "vue-cli-plugin-i18n": "~1.0.1",
+    "vue-cli-plugin-tailwind": "^1.5.0",
     "vue-template-compiler": "^2.6.12"
   },
   "config": {
