build: update deps

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve",
+    "build:staging": "vue-cli-service build --report --mode staging",
+    "build": "vue-cli-service build --report",
     "lint": "npm run lint:script && npm run lint:style && npm run lint:ls",
     "check": "ncu",
-    "commit": "git-ze && git push",
-    "dev": "vue-cli-service serve",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
+    "commit": "git-cz && git push",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
     "lint:script": "vue-cli-service lint",
     "lint:style": "stylelint ./src/**/*.scss --fix",
     "lint:ls": "ls-lint"
@@ -24,23 +25,24 @@
     "axios": "^0.20.0",
     "better-scroll": "^2.0.3",
     "core-js": "^3.6.5",
-    "dayjs": "^1.8.35",
+    "dayjs": "^1.8.36",
     "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "element-ui-eoi": "^2.14.4",
     "lodash-es": "^4.17.15",
     "nprogress": "^0.2.0",
     "ress": "^3.0.0",
-    "swrv": "^0.7.4",
+    "swrv": "^0.7.6",
     "vue": "^2.6.12",
     "vue-clipboard2": "^0.3.1",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-i18n": "^8.21.1",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.4.3",
     "vue-virtual-scroll-list": "^2.3.1",
     "vuex": "^3.5.1",
     "vxe-table": "^2.9.22",
-    "vxe-table-plugin-element": "^1.9.2",
+    "vxe-table-plugin-element": "^1.9.3",
     "xe-utils": "^2.7.11"
   },
   "devDependencies": {
@@ -58,10 +60,10 @@
     "@vue/cli-service": "^4.5.6",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.1",
-    "compression-webpack-plugin": "^6.0.0",
+    "compression-webpack-plugin": "^6.0.1",
     "eslint": "^7.9.0",
     "husky": "^4.3.0",
-    "lint-staged": "^10.3.0",
+    "lint-staged": "^10.4.0",
     "node-sass": "^4.14.1",
     "npm-check-updates": "^9.0.1",
     "prettier": "^2.1.2",
