--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "@ant-design/icons-svg": "^4.1.0",
     "@ant-design/icons-vue": "4.0.6",
     "@ls-lint/ls-lint": "^1.9.2",
-    "@nutui/nutui": "^2.2.10",
     "@vue/composition-api": "^1.0.0-beta.14",
     "axios": "^0.20.0",
-    "better-scroll": "^2.0.3",
+    "better-scroll": "^2.0.4",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.36",
     "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "element-ui-eoi": "^2.14.4",
     "lodash-es": "^4.17.15",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "portal-vue": "^2.1.7",
     "ress": "^3.0.0",
     "swrv": "^0.7.6",
     "vue": "^2.6.12",
@@ -41,9 +42,9 @@
     "vue-router": "^3.4.3",
     "vue-virtual-scroll-list": "^2.3.1",
     "vuex": "^3.5.1",
-    "vxe-table": "^2.9.22",
+    "vxe-table": "^2.9.23",
     "vxe-table-plugin-element": "^1.9.3",
-    "xe-utils": "^2.7.11"
+    "xe-utils": "^2.7.13"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -60,12 +61,12 @@
     "@vue/cli-service": "^4.5.6",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.1",
-    "compression-webpack-plugin": "^6.0.1",
+    "compression-webpack-plugin": "^6.0.2",
     "eslint": "^7.9.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "node-sass": "^4.14.1",
-    "npm-check-updates": "^9.0.1",
+    "npm-check-updates": "^9.0.2",
     "prettier": "^2.1.2",
     "sass-loader": "^10.0.2",
     "stylelint": "^13.7.1",
