--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ant-design/icons-svg": "^4.1.0",
     "@ant-design/icons-vue": "4.0.6",
     "@ls-lint/ls-lint": "^1.9.2",
+    "@mdi/font": "^3.6.95",
     "@vue/composition-api": "^1.0.0-beta.14",
     "axios": "^0.20.0",
     "better-scroll": "^2.0.4",
@@ -33,6 +34,7 @@
     "nprogress": "^0.2.0",
     "portal-vue": "^2.1.7",
     "ress": "^3.0.0",
+    "roboto-fontface": "*",
     "swrv": "^0.7.6",
     "vue": "^2.6.12",
     "vue-clipboard2": "^0.3.1",
@@ -41,6 +43,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.4.3",
     "vue-virtual-scroll-list": "^2.3.1",
+    "vuetify": "^2.2.11",
     "vuex": "^3.5.1",
     "vxe-table": "^2.9.23",
     "vxe-table-plugin-element": "^1.9.3",
@@ -68,12 +71,15 @@
     "node-sass": "^4.14.1",
     "npm-check-updates": "^9.0.2",
     "prettier": "^2.1.2",
+    "sass": "^1.19.0",
     "sass-loader": "^10.0.2",
     "stylelint": "^13.7.1",
     "stylelint-webpack-plugin": "^2.1.0",
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-tailwind": "^1.5.0",
-    "vue-template-compiler": "^2.6.12"
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.3.0"
   },
   "config": {
     "commitizen": {
