--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "portal-vue": "^2.1.7",
     "ress": "^3.0.0",
     "roboto-fontface": "*",
+    "screenfull": "^5.0.2",
     "swrv": "^0.7.6",
     "vue": "^2.6.12",
     "vue-clipboard2": "^0.3.1",
