--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@ant-design/icons-svg": "^4.1.0",
     "@ant-design/icons-vue": "4.0.6",
     "@mdi/font": "^5.7.55",
-    "@vue/composition-api": "^1.0.0-beta.16",
-    "axios": "^0.20.0",
-    "better-scroll": "^2.0.4",
+    "@vue/composition-api": "^1.0.0-beta.18",
+    "axios": "^0.21.0",
+    "better-scroll": "^2.0.5",
     "core-js": "^3.6.5",
-    "dayjs": "^1.9.3",
+    "dayjs": "^1.9.4",
     "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "element-ui-eoi": "^2.14.4",
@@ -35,44 +35,44 @@
     "ress": "^3.0.0",
     "roboto-fontface": "*",
     "screenfull": "^5.0.2",
-    "swrv": "^0.7.7",
+    "swrv": "^0.8.0",
     "vue": "^2.6.12",
     "vue-clipboard2": "^0.3.1",
     "vue-echarts": "^5.0.0-beta.0",
-    "vue-i18n": "^8.22.0",
+    "vue-i18n": "^8.22.1",
     "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.4.6",
+    "vue-router": "^3.4.7",
     "vue-virtual-scroll-list": "^2.3.1",
-    "vuetify": "^2.3.14",
+    "vuetify": "^2.3.15",
     "vuex": "^3.5.1",
     "vxe-table": "^2.9.25",
-    "vxe-table-plugin-element": "^1.9.3",
-    "xe-utils": "^2.7.14"
+    "vxe-table-plugin-element": "^1.9.4",
+    "xe-utils": "^2.7.16"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@intlify/vue-i18n-loader": "^1.0.0",
     "@ls-lint/ls-lint": "^1.9.2",
-    "@modyqyw/eslint-config-vue": "^1.9.1",
-    "@modyqyw/prettier-config": "^1.1.4",
-    "@modyqyw/stylelint-config": "^1.0.0",
+    "@modyqyw/eslint-config": "^1.9.1",
+    "@modyqyw/prettier-config": "^1.1.7",
+    "@modyqyw/stylelint-config": "^1.0.3",
     "@types/lodash-es": "^4.17.3",
-    "@vue/cli-plugin-babel": "^4.5.7",
-    "@vue/cli-plugin-eslint": "^4.5.7",
-    "@vue/cli-plugin-router": "^4.5.7",
-    "@vue/cli-plugin-vuex": "^4.5.7",
-    "@vue/cli-service": "^4.5.7",
+    "@vue/cli-plugin-babel": "^4.5.8",
+    "@vue/cli-plugin-eslint": "^4.5.8",
+    "@vue/cli-plugin-router": "^4.5.8",
+    "@vue/cli-plugin-vuex": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
     "babel-eslint": "^10.1.0",
-    "commitizen": "^4.2.1",
+    "commitizen": "^4.2.2",
     "compression-webpack-plugin": "^6.0.3",
     "eslint": "^7.11.0",
     "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "npm-check-updates": "^9.1.0",
+    "lint-staged": "^10.4.2",
+    "npm-check-updates": "^9.1.2",
     "prettier": "^2.1.2",
     "sass": "^1.27.0",
-    "sass-loader": "^10.0.3",
+    "sass-loader": "^10.0.4",
     "stylelint": "^13.7.2",
     "stylelint-webpack-plugin": "^2.1.1",
     "vue-cli-plugin-i18n": "~1.0.1",
