--- a/package.json
+++ b/package.json
@@ -15,71 +15,71 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'"
   },
   "dependencies": {
-    "@ant-design/colors": "^4.0.5",
-    "@ant-design/icons-svg": "^4.1.0",
-    "@ant-design/icons-vue": "4.0.6",
-    "@mdi/font": "^5.8.55",
-    "@vue/composition-api": "^1.0.0-beta.18",
-    "axios": "^0.21.0",
-    "better-scroll": "^2.0.5",
-    "core-js": "^3.6.5",
-    "dayjs": "^1.9.4",
-    "echarts": "^4.9.0",
-    "element-ui": "^2.13.2",
-    "element-ui-eoi": "^2.14.4",
-    "lodash-es": "^4.17.15",
-    "mitt": "^2.1.0",
-    "mockjs": "^1.1.0",
-    "nprogress": "^0.2.0",
-    "portal-vue": "^2.1.7",
-    "ress": "^3.0.0",
+    "@ant-design/colors": "~4.0.5",
+    "@ant-design/icons-svg": "~4.1.0",
+    "@ant-design/icons-vue": "~4.0.6",
+    "@mdi/font": "~5.8.55",
+    "@vue/composition-api": "~1.0.0-beta.19",
+    "axios": "~0.21.0",
+    "better-scroll": "~2.0.5",
+    "core-js": "~3.7.0",
+    "dayjs": "~1.9.4",
+    "echarts": "~4.9.0",
+    "element-ui": "~2.14.1",
+    "element-ui-eoi": "~2.14.5",
+    "lodash-es": "~4.17.15",
+    "mitt": "~2.1.0",
+    "mockjs": "~1.1.0",
+    "nprogress": "~0.2.0",
+    "portal-vue": "~2.1.7",
+    "ress": "~3.0.0",
     "roboto-fontface": "*",
-    "screenfull": "^5.0.2",
-    "swrv": "^0.8.0",
-    "vue": "^2.6.12",
-    "vue-clipboard2": "^0.3.1",
-    "vue-echarts": "^5.0.0-beta.0",
-    "vue-i18n": "^8.22.1",
-    "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.4.8",
-    "vue-virtual-scroll-list": "^2.3.1",
-    "vuetify": "^2.3.16",
-    "vuex": "^3.5.1",
-    "vxe-table": "^2.9.26",
-    "vxe-table-plugin-element": "^1.9.4",
-    "xe-utils": "^2.8.0"
+    "screenfull": "~5.0.2",
+    "swrv": "~0.8.1",
+    "vue": "~2.6.12",
+    "vue-clipboard2": "~0.3.1",
+    "vue-echarts": "~5.0.0-beta.0",
+    "vue-i18n": "~8.22.1",
+    "vue-lazyload": "~1.3.3",
+    "vue-router": "~3.4.9",
+    "vue-virtual-scroll-list": "~2.3.1",
+    "vuetify": "~2.3.17",
+    "vuex": "~3.5.1",
+    "vxe-table": "~2.9.27",
+    "vxe-table-plugin-element": "~1.9.5",
+    "xe-utils": "~2.8.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@intlify/vue-i18n-loader": "^1.0.0",
-    "@ls-lint/ls-lint": "^1.9.2",
-    "@modyqyw/eslint-config": "^1.9.2",
-    "@modyqyw/prettier-config": "^1.1.7",
-    "@modyqyw/stylelint-config": "^1.0.3",
-    "@types/lodash-es": "^4.17.3",
-    "@vue/cli-plugin-babel": "^4.5.8",
-    "@vue/cli-plugin-eslint": "^4.5.8",
-    "@vue/cli-plugin-router": "^4.5.8",
-    "@vue/cli-plugin-vuex": "^4.5.8",
-    "@vue/cli-service": "^4.5.8",
-    "babel-eslint": "^10.1.0",
-    "commitizen": "^4.2.2",
-    "compression-webpack-plugin": "^6.0.4",
-    "eslint": "^7.12.1",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.0",
-    "npm-check-updates": "^9.2.3",
-    "prettier": "^2.1.2",
-    "sass": "^1.27.0",
-    "sass-loader": "^10.0.4",
-    "stylelint": "^13.7.2",
-    "stylelint-webpack-plugin": "^2.1.1",
+    "@commitlint/cli": "~11.0.0",
+    "@commitlint/config-conventional": "~11.0.0",
+    "@intlify/vue-i18n-loader": "~1.0.0",
+    "@ls-lint/ls-lint": "~1.9.2",
+    "@modyqyw/eslint-config": "~1.9.3",
+    "@modyqyw/prettier-config": "~1.1.8",
+    "@modyqyw/stylelint-config": "~1.0.4",
+    "@types/lodash-es": "~4.17.3",
+    "@vue/cli-plugin-babel": "~4.5.8",
+    "@vue/cli-plugin-eslint": "~4.5.8",
+    "@vue/cli-plugin-router": "~4.5.8",
+    "@vue/cli-plugin-vuex": "~4.5.8",
+    "@vue/cli-service": "~4.5.8",
+    "babel-eslint": "~10.1.0",
+    "commitizen": "~4.2.2",
+    "compression-webpack-plugin": "~6.1.0",
+    "eslint": "~7.13.0",
+    "husky": "~4.3.0",
+    "lint-staged": "~10.5.1",
+    "npm-check-updates": "~10.0.0",
+    "prettier": "~2.1.2",
+    "sass": "~1.29.0",
+    "sass-loader": "~10.1.0",
+    "stylelint": "~13.7.2",
+    "stylelint-webpack-plugin": "~2.1.1",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-cli-plugin-tailwind": "^1.5.0",
-    "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.6.0"
+    "vue-cli-plugin-tailwind": "~1.5.0",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "~2.6.12",
+    "vuetify-loader": "~1.6.0"
   },
   "engines": {
     "node": ">=12 <13"
