--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "build": "vue-cli-service build --report",
     "check": "ncu",
     "commit": "git-cz && git push",
-    "lint": "npm run lint:script && npm run lint:style && npm run lint:ls",
+    "lint": "yarn lint:script && yarn lint:style && yarn lint:ls",
     "lint:script": "vue-cli-service lint",
     "lint:style": "stylelint ./src/**/*.scss --fix",
     "lint:ls": "ls-lint",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'"
   },
   "dependencies": {
-    "@ant-design/colors": "~4.0.5",
+    "@ant-design/colors": "~5.0.0",
     "@ant-design/icons-svg": "~4.1.0",
     "@ant-design/icons-vue": "~4.0.6",
     "@mdi/font": "~5.8.55",
@@ -23,10 +23,10 @@
     "axios": "~0.21.0",
     "better-scroll": "~2.0.5",
     "core-js": "~3.7.0",
-    "dayjs": "~1.9.4",
+    "dayjs": "~1.9.6",
     "echarts": "~4.9.0",
     "element-ui": "~2.14.1",
-    "element-ui-eoi": "~2.14.5",
+    "element-ui-eoi": "~2.14.6",
     "lodash-es": "~4.17.15",
     "mitt": "~2.1.0",
     "mockjs": "~1.1.0",
@@ -45,9 +45,9 @@
     "vue-virtual-scroll-list": "~2.3.1",
     "vuetify": "~2.3.17",
     "vuex": "~3.5.1",
-    "vxe-table": "~2.9.27",
-    "vxe-table-plugin-element": "~1.9.5",
-    "xe-utils": "~2.8.1"
+    "vxe-table": "~2.10.0",
+    "vxe-table-plugin-element": "~1.10.0",
+    "xe-utils": "~3.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "~11.0.0",
@@ -55,21 +55,22 @@
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
     "@modyqyw/eslint-config": "~1.9.3",
+    "@modyqyw/fabric": "^1.0.7",
     "@modyqyw/prettier-config": "~1.1.8",
     "@modyqyw/stylelint-config": "~1.0.4",
     "@types/lodash-es": "~4.17.3",
-    "@vue/cli-plugin-babel": "~4.5.8",
-    "@vue/cli-plugin-eslint": "~4.5.8",
-    "@vue/cli-plugin-router": "~4.5.8",
-    "@vue/cli-plugin-vuex": "~4.5.8",
-    "@vue/cli-service": "~4.5.8",
+    "@vue/cli-plugin-babel": "~4.5.9",
+    "@vue/cli-plugin-eslint": "~4.5.9",
+    "@vue/cli-plugin-router": "~4.5.9",
+    "@vue/cli-plugin-vuex": "~4.5.9",
+    "@vue/cli-service": "~4.5.9",
     "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.2",
-    "compression-webpack-plugin": "~6.1.0",
+    "compression-webpack-plugin": "~6.1.1",
     "eslint": "~7.13.0",
     "husky": "~4.3.0",
     "lint-staged": "~10.5.1",
-    "npm-check-updates": "~10.0.0",
+    "npm-check-updates": "~10.2.1",
     "prettier": "~2.1.2",
     "sass": "~1.29.0",
     "sass-loader": "~10.1.0",
@@ -97,11 +98,9 @@
   },
   "lint-staged": {
     "./src/**/*.scss": [
-      "prettier --write",
       "stylelint --fix"
     ],
     "./src/**/*.{js,jsx}": [
-      "prettier --write",
       "vue-cli-service lint"
     ],
     "./src/**/*.vue": [
