--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "vue": "~2.6.12",
     "vue-clipboard2": "~0.3.1",
     "vue-echarts": "~5.0.0-beta.0",
-    "vue-i18n": "~8.22.1",
+    "vue-i18n": "~8.22.2",
     "vue-lazyload": "~1.3.3",
     "vue-router": "~3.4.9",
     "vue-virtual-scroll-list": "~2.3.1",
-    "vuetify": "~2.3.17",
+    "vuetify": "~2.3.18",
     "vuex": "~3.5.1",
-    "vxe-table": "~2.10.0",
-    "vxe-table-plugin-element": "~1.10.0",
+    "vxe-table": "~2.10.2",
+    "vxe-table-plugin-element": "~1.10.1",
     "xe-utils": "~3.0.1"
   },
   "devDependencies": {
@@ -55,7 +55,7 @@
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
     "@modyqyw/eslint-config": "~1.9.3",
-    "@modyqyw/fabric": "^1.0.7",
+    "@modyqyw/fabric": "~1.0.10",
     "@modyqyw/prettier-config": "~1.1.8",
     "@modyqyw/stylelint-config": "~1.0.4",
     "@types/lodash-es": "~4.17.3",
@@ -71,10 +71,10 @@
     "husky": "~4.3.0",
     "lint-staged": "~10.5.1",
     "npm-check-updates": "~10.2.1",
-    "prettier": "~2.1.2",
+    "prettier": "~2.2.0",
     "sass": "~1.29.0",
     "sass-loader": "~10.1.0",
-    "stylelint": "~13.7.2",
+    "stylelint": "~13.8.0",
     "stylelint-webpack-plugin": "~2.1.1",
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-tailwind": "~1.5.0",
