build: update deps

--- a/.ls-lint.yml
+++ b/.ls-lint.yml
@@ -5,8 +5,9 @@ ls:
     .ts: kebab-case
     .tsx: kebab-case | PascalCase
     .vue: kebab-case | PascalCase
-    .scss: kebab-case
-    .less: kebab-case
+    .css: kebab-case | point.case
+    .less: kebab-case | point.case
+    .scss: kebab-case | point.case
 
 ignore:
   - .git
