--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mdi/font": "~5.8.55",
     "@vue/composition-api": "~1.0.0-beta.20",
     "axios": "~0.21.0",
-    "better-scroll": "~2.0.5",
+    "better-scroll": "~2.0.6",
     "core-js": "~3.8.0",
     "dayjs": "~1.9.6",
     "echarts": "~4.9.0",
@@ -43,14 +43,14 @@
     "vuex": "~3.6.0",
     "vxe-table": "~2.10.2",
     "vxe-table-plugin-element": "~1.10.1",
-    "xe-utils": "~3.0.2"
+    "xe-utils": "~3.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
     "@modyqyw/eslint-config": "~1.9.3",
-    "@modyqyw/fabric": "~1.2.1",
+    "@modyqyw/fabric": "~1.3.4",
     "@modyqyw/prettier-config": "~1.1.8",
     "@modyqyw/stylelint-config": "~1.0.4",
     "@types/lodash-es": "~4.17.3",
@@ -89,15 +89,11 @@
     }
   },
   "lint-staged": {
-    "./src/**/*.scss": [
+    "./src/**/*.{css,less,scss,vue}": [
       "stylelint --fix"
     ],
-    "./src/**/*.{js,jsx}": [
-      "vue-cli-service lint"
-    ],
-    "./src/**/*.vue": [
-      "vue-cli-service lint",
-      "stylelint --fix"
+    "./src/**/*.{js,jsx,ts,tsx,vue}": [
+      "vue-cli-service lint --fix"
     ],
     ".": [
       "ls-lint"
