--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "vue-cli-service serve",
     "build:staging": "vue-cli-service build --report --mode staging",
     "build": "vue-cli-service build --report",
-    "lint": "yarn lint:script && yarn lint:style && yarn lint:ls",
-    "lint:ls": "ls-lint",
-    "lint:script": "vue-cli-service lint --fix",
-    "lint:style": "stylelint ./src/**/*.scss --fix",
     "check": "ncu",
     "commit": "git-cz && git push",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'"
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
+    "lint": "yarn lint:json && yarn lint:script && yarn lint:style && yarn lint:ls",
+    "lint:json": "prettier ./**/*.json -w",
+    "lint:script": "vue-cli-service lint --fix",
+    "lint:style": "stylelint ./src/**/*.scss --fix",
+    "lint:ls": "ls-lint"
   },
   "dependencies": {
     "@ant-design/colors": "~5.0.0",
@@ -50,7 +51,7 @@
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
     "@modyqyw/eslint-config": "~1.9.3",
-    "@modyqyw/fabric": "~1.3.10",
+    "@modyqyw/fabric": "~1.4.2",
     "@modyqyw/prettier-config": "~1.1.8",
     "@modyqyw/stylelint-config": "~1.0.4",
     "@types/lodash-es": "~4.17.3",
@@ -89,14 +90,6 @@
     }
   },
   "lint-staged": {
-    "./src/**/*.{css,less,scss,vue}": [
-      "stylelint --fix"
-    ],
-    "./src/**/*.{js,jsx,ts,tsx,vue}": [
-      "vue-cli-service lint --fix"
-    ],
-    ".": [
-      "ls-lint"
-    ]
+    ".": "yarn lint"
   }
 }
