--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build:staging": "vue-cli-service build --report --mode staging",
+    "staging-build": "vue-cli-service build --report --mode staging",
     "build": "vue-cli-service build --report",
     "check": "ncu",
     "commit": "git-cz && git push",
@@ -12,26 +12,26 @@
     "lint": "yarn lint:json && yarn lint:script && yarn lint:style && yarn lint:ls",
     "lint:json": "prettier ./**/*.json -w",
     "lint:script": "vue-cli-service lint --fix",
-    "lint:style": "stylelint ./src/**/*.scss --fix",
+    "lint:style": "stylelint ./src/**/*.{css,less,scss,vue} --fix",
     "lint:ls": "ls-lint"
   },
   "dependencies": {
     "@ant-design/colors": "~5.0.0",
     "@mdi/font": "~5.8.55",
     "@vue/composition-api": "~1.0.0-beta.20",
+    "@vueuse/core": "~4.0.0-rc.5",
     "axios": "~0.21.0",
     "better-scroll": "~2.0.6",
     "core-js": "~3.8.0",
     "dayjs": "~1.9.6",
     "echarts": "~4.9.0",
-    "element-ui": "~2.14.1",
-    "element-ui-eoi": "~2.14.7",
     "lodash-es": "~4.17.15",
     "mitt": "~2.1.0",
     "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
     "ress": "~3.0.0",
+    "roboto-fontface": "~0.10.0",
     "screenfull": "~5.0.2",
     "swrv": "~0.8.1",
     "vue": "~2.6.12",
@@ -41,9 +41,8 @@
     "vue-lazyload": "~1.3.3",
     "vue-router": "~3.4.9",
     "vue-virtual-scroll-list": "~2.3.2",
+    "vuetify": "~2.3.19",
     "vuex": "~3.6.0",
-    "vxe-table": "~2.10.2",
-    "vxe-table-plugin-element": "~1.10.1",
     "xe-utils": "~3.0.3"
   },
   "devDependencies": {
@@ -73,7 +72,9 @@
     "stylelint": "~13.8.0",
     "stylelint-webpack-plugin": "~2.1.1",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-template-compiler": "~2.6.12"
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-template-compiler": "~2.6.12",
+    "vuetify-loader": "~1.6.0"
   },
   "config": {
     "commitizen": {
