--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,8 @@
       "@/*": ["./src/*"],
       "@a/*": ["./src/assets/*"],
       "@c/*": ["./src/components/*"],
-      "@m/*": ["./src/mixins/*"],
-      "@u/*": ["./src/utils/*"],
-      "element-ui": ["node_modules/element-ui-eoi"],
-      "element-ui/*": ["node_modules/element-ui-eoi/*"]
+      "@h/*": ["./src/hooks/*"],
+      "@u/*": ["./src/utils/*"]
     },
     "lib": ["esnext", "scripthost"],
     "allowJs": true,
