--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ web_modules/
 # dotenv environment variables file
 .env
 .env.test
+.env.*.test
 .env.local
 .env.*.local
 
@@ -116,8 +117,12 @@ dist
 # TernJS port file
 .tern-port
 
-# Stores VSCode versions used for testing VSCode extensions
+# VSCode
 .vscode-test
+.vscode
+
+# Jetbrains
+.idea
 
 # yarn v2
 .yarn/cache
