--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
-NODE_ENV = production
-VUE_APP_MODE = production
+NODE_ENV=production
+VUE_APP_MODE=production
+VUE_APP_PUBLIC_PATH=/
+VUE_APP_BASE_URL=https://fake.url/api
