--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,4 @@
-NODE_ENV = production
-VUE_APP_MODE = staging
+NODE_ENV=production
+VUE_APP_MODE=staging
+VUE_APP_PUBLIC_PATH=/
+VUE_APP_BASE_URL=https://fake.url/api
