--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "vue-cli-service serve",
     "staging-build": "vue-cli-service build --report --mode staging",
     "build": "vue-cli-service build --report",
+    "electron:dev": "vue-cli-service electron:serve",
+    "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l --x64",
+    "electron:build": "vue-cli-service electron:build --report -m -w -l --x64",
     "check": "ncu",
     "commit": "git-cz && git push",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
@@ -13,8 +16,11 @@
     "lint:json": "prettier ./**/*.json -w",
     "lint:script": "vue-cli-service lint --fix",
     "lint:style": "stylelint ./src/**/*.{css,less,scss,vue} --fix",
-    "lint:ls": "ls-lint"
+    "lint:ls": "ls-lint .",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "@ant-design/colors": "~5.0.1",
     "@mdi/font": "~5.8.55",
@@ -52,6 +58,8 @@
     "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.2",
     "compression-webpack-plugin": "~6.1.1",
+    "electron": "~8.5.5",
+    "electron-devtools-installer": "~3.1.1",
     "eslint": "~7.15.0",
     "husky": "~4.3.6",
     "lint-staged": "~10.5.3",
@@ -61,6 +69,7 @@
     "sass-loader": "~10.1.0",
     "stylelint": "~13.8.0",
     "stylelint-webpack-plugin": "~2.1.1",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "~2.0.8",
     "vue-template-compiler": "~2.6.12",
