--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
   "dependencies": {
     "@ant-design/colors": "~5.0.1",
     "@mdi/font": "~5.8.55",
-    "@vue/composition-api": "~1.0.0-beta.21",
-    "@vueuse/core": "~4.0.0-rc.11",
-    "axios": "~0.21.0",
+    "@vue/composition-api": "~1.0.0-beta.22",
+    "@vueuse/core": "~4.0.0",
+    "axios": "~0.21.1",
     "better-scroll": "~2.0.6",
     "core-js": "~3.8.1",
     "dayjs": "~1.9.7",
-    "lodash-es": "~4.17.15",
+    "lodash-es": "~4.17.20",
     "mitt": "~2.1.0",
     "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
     "roboto-fontface": "~0.10.0",
-    "swrv": "~0.8.2",
+    "swrv": "~0.9.1",
     "vue": "~2.6.12",
     "vue-i18n": "~8.22.2",
     "vue-router": "~3.4.9",
-    "vuetify": "~2.3.21",
+    "vuetify": "~2.4.0",
     "vuex": "~3.6.0",
     "xe-utils": "~3.0.4"
   },
@@ -48,7 +48,7 @@
     "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.7.0",
+    "@modyqyw/fabric": "~1.8.0",
     "@types/lodash-es": "~4.17.4",
     "@vue/cli-plugin-babel": "~4.5.9",
     "@vue/cli-plugin-eslint": "~4.5.9",
@@ -60,7 +60,7 @@
     "compression-webpack-plugin": "~6.1.1",
     "electron": "~8.5.5",
     "electron-devtools-installer": "~3.1.1",
-    "eslint": "~7.15.0",
+    "eslint": "~7.16.0",
     "husky": "~4.3.6",
     "lint-staged": "~10.5.3",
     "npm-check-updates": "~10.2.5",
