--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "staging-build": "vue-cli-service build --report --mode staging",
-    "build": "vue-cli-service build --report",
+    "dev": "vue-cli-service serve --mode development",
+    "staging-build": "vue-cli-service build --mode staging --report",
+    "build": "vue-cli-service build --mode production --report",
     "electron:dev": "vue-cli-service electron:serve",
     "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l --x64",
     "electron:build": "vue-cli-service electron:build --report -m -w -l --x64",
@@ -25,9 +25,9 @@
     "@ant-design/colors": "~5.0.1",
     "@mdi/font": "~5.8.55",
     "@vue/composition-api": "~1.0.0-beta.22",
-    "@vueuse/core": "~4.0.1",
+    "@vueuse/core": "~4.0.2",
     "axios": "~0.21.1",
-    "better-scroll": "~2.0.7",
+    "better-scroll": "~2.1.0",
     "core-js": "~3.8.1",
     "dayjs": "~1.9.8",
     "lodash-es": "~4.17.20",
@@ -60,7 +60,7 @@
     "compression-webpack-plugin": "~6.1.1",
     "electron": "~8.5.5",
     "electron-devtools-installer": "~3.1.1",
-    "eslint": "~7.16.0",
+    "eslint": "~7.17.0",
     "husky": "~4.3.6",
     "lint-staged": "~10.5.3",
     "npm-check-updates": "~10.2.5",
