--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@ant-design/colors": "~5.0.1",
     "@mdi/font": "~5.8.55",
-    "@vue/composition-api": "~1.0.0-beta.23",
+    "@vue/composition-api": "~1.0.0-beta.24",
     "@vueuse/core": "~4.0.4",
     "axios": "~0.21.1",
     "better-scroll": "~2.1.1",
@@ -50,6 +50,7 @@
     "@ls-lint/ls-lint": "~1.9.2",
     "@modyqyw/fabric": "~1.10.0",
     "@types/lodash-es": "~4.17.4",
+    "@types/node": "~12.19.12",
     "@vue/cli-plugin-babel": "~4.5.10",
     "@vue/cli-plugin-eslint": "~4.5.10",
     "@vue/cli-plugin-router": "~4.5.10",
