--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "check": "ncu",
     "commit": "git-cz && git push",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "lint": "yarn lint:json && yarn lint:script && yarn lint:style && yarn lint:ls",
-    "lint:json": "prettier ./**/*.json -w",
+    "lint": "yarn lint:json && yarn lint:markdown && yarn lint:script && yarn lint:style && yarn lint:ls",
+    "lint:json": "prettier ./**/*.json --write",
+    "lint:markdown": "markdownlint . --fix",
     "lint:script": "vue-cli-service lint --fix",
-    "lint:style": "stylelint ./src/**/*.{css,less,scss,vue} --fix",
+    "lint:style": "stylelint ./**/*.{css,less,scss,vue} --fix",
     "lint:ls": "ls-lint .",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
@@ -48,7 +49,7 @@
     "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.10.0",
+    "@modyqyw/fabric": "~1.11.1",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~12.19.13",
     "@vue/cli-plugin-babel": "~4.5.10",
@@ -64,6 +65,7 @@
     "eslint": "~7.17.0",
     "husky": "~4.3.7",
     "lint-staged": "~10.5.3",
+    "markdownlint-cli": "~0.26.0",
     "npm-check-updates": "~10.2.5",
     "prettier": "~2.2.1",
     "sass": "~1.32.4",
@@ -87,10 +89,13 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
+      "pre-commit": "yarn lint:ls && lint-staged"
     }
   },
   "lint-staged": {
-    ".": "yarn lint"
+    "*.json": "prettier --write",
+    "*.markdown": "markdownlint --fix",
+    "*.{js,jsx,ts,tsx,vue}": "vue-cli-service --fix",
+    "*.{css,less,scss,vue}": "stylelint --fix"
   }
 }
