--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "dependencies": {
     "@ant-design/colors": "~5.0.1",
     "@mdi/font": "~5.9.55",
-    "@vue/composition-api": "~1.0.0-beta.26",
+    "@vue/composition-api": "~1.0.0-rc.1",
     "@vueuse/core": "~4.0.8",
     "axios": "~0.21.1",
-    "better-scroll": "~2.1.1",
-    "core-js": "~3.8.2",
+    "better-scroll": "~2.1.3",
+    "core-js": "~3.8.3",
     "dayjs": "~1.10.3",
     "lodash-es": "~4.17.20",
     "mitt": "~2.1.0",
@@ -41,17 +41,17 @@
     "vue": "~2.6.12",
     "vue-i18n": "~8.22.4",
     "vue-router": "~3.4.9",
-    "vuetify": "~2.4.2",
+    "vuetify": "~2.4.3",
     "vuex": "~3.6.0",
-    "xe-utils": "~3.0.4"
+    "xe-utils": "~3.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.11.1",
+    "@modyqyw/fabric": "~1.12.0",
     "@types/lodash-es": "~4.17.4",
-    "@types/node": "~12.19.14",
+    "@types/node": "~14.14.22",
     "@vue/cli-plugin-babel": "~4.5.10",
     "@vue/cli-plugin-eslint": "~4.5.10",
     "@vue/cli-plugin-router": "~4.5.10",
@@ -66,11 +66,11 @@
     "husky": "~4.3.8",
     "lint-staged": "~10.5.3",
     "markdownlint-cli": "~0.26.0",
-    "npm-check-updates": "~10.2.5",
+    "npm-check-updates": "~11.0.2",
     "prettier": "~2.2.1",
-    "sass": "~1.32.4",
+    "sass": "~1.32.5",
     "sass-loader": "~10.1.1",
-    "stylelint": "~13.8.0",
+    "stylelint": "~13.9.0",
     "stylelint-webpack-plugin": "~2.1.1",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
     "vue-cli-plugin-i18n": "~1.0.1",
