--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.12.0",
+    "@modyqyw/fabric": "~1.12.1",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.22",
     "@vue/cli-plugin-babel": "~4.5.11",
@@ -94,7 +94,7 @@
   },
   "lint-staged": {
     "*.json": "prettier --write",
-    "*.markdown": "markdownlint --fix",
+    "*.md": "markdownlint --fix",
     "*.{js,jsx,ts,tsx,vue}": "vue-cli-service --fix",
     "*.{css,less,scss,vue}": "stylelint --fix"
   }
