chore: update mirror files

--- a/.npmrc
+++ b/.npmrc
@@ -1,10 +1,10 @@
 registry=https://registry.npm.taobao.org
-sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
-phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
-electron_mirror=https://npm.taobao.org/mirrors/electron/
+chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver/
 electron_builder_binaries_mirror=https://npm.taobao.org/mirrors/electron-builder-binaries/
-chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver
-operadriver_cdnurl=https://npm.taobao.org/mirrors/operadriver
-selenium_cdnurl=https://npm.taobao.org/mirrors/selenium
-node_inspector_cdnurl=https://npm.taobao.org/mirrors/node-inspector
-fsevents_binary_host_mirror=https://npm.taobao.org/mirrors/fsevents/
+electron_mirror=https://npm.taobao.org/mirrors/electron/
+fsevents_binary_host_mirror=http://npm.taobao.org/mirrors/fsevents/
+node_inspector_cdnurl=https://npm.taobao.org/mirrors/node-inspector/
+operadriver_cdnurl=https://npm.taobao.org/mirrors/operadriver/
+phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
+sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
+selenium_cdnurl=https://npm.taobao.org/mirrors/selenium/
