--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check": "ncu",
     "commit": "git-cz && git push",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "yarn lint:json && yarn lint:markdown && yarn lint:script && yarn lint:style && yarn lint:ls",
     "lint:json": "prettier ./**/*.json --write",
     "lint:markdown": "markdownlint . --fix",
@@ -40,7 +41,7 @@
     "swrv": "~0.9.2",
     "vue": "~2.6.12",
     "vue-i18n": "~8.22.4",
-    "vue-router": "~3.4.9",
+    "vue-router": "~3.5.1",
     "vuetify": "~2.4.3",
     "vuex": "~3.6.0",
     "xe-utils": "~3.1.2"
@@ -49,14 +50,16 @@
     "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.12.1",
+    "@modyqyw/fabric": "~1.13.0",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.22",
     "@vue/cli-plugin-babel": "~4.5.11",
     "@vue/cli-plugin-eslint": "~4.5.11",
+    "@vue/cli-plugin-unit-jest": "~4.5.11",
     "@vue/cli-plugin-router": "~4.5.11",
     "@vue/cli-plugin-vuex": "~4.5.11",
     "@vue/cli-service": "~4.5.11",
+    "@vue/test-utils": "~1.1.2",
     "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.3",
     "compression-webpack-plugin": "~6.1.1",
@@ -66,7 +69,7 @@
     "husky": "~4.3.8",
     "lint-staged": "~10.5.3",
     "markdownlint-cli": "~0.26.0",
-    "npm-check-updates": "~11.0.2",
+    "npm-check-updates": "~11.1.0",
     "prettier": "~2.2.1",
     "sass": "~1.32.5",
     "sass-loader": "~10.1.1",
