--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l --x64",
     "electron:build": "vue-cli-service electron:build --report -m -w -l --x64",
     "check": "ncu",
-    "commit": "git-cz && git push",
+    "commit": "cz",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
     "test:unit": "vue-cli-service test:unit",
     "lint": "yarn lint:json && yarn lint:markdown && yarn lint:script && yarn lint:style && yarn lint:ls",
     "lint:json": "prettier ./**/*.json --write",
     "lint:markdown": "markdownlint . --fix",
     "lint:script": "vue-cli-service lint --fix",
-    "lint:style": "stylelint ./**/*.{css,less,scss,vue} --fix",
+    "lint:style": "stylelint ./**/*.{css,less,sass,scss,vue} --fix",
     "lint:ls": "ls-lint .",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
@@ -27,9 +27,9 @@
     "@ant-design/colors": "~5.0.1",
     "@mdi/font": "~5.9.55",
     "@vue/composition-api": "~1.0.0-rc.1",
-    "@vueuse/core": "~4.0.11",
+    "@vueuse/core": "~4.0.12",
     "axios": "~0.21.1",
-    "better-scroll": "~2.1.4",
+    "better-scroll": "~2.2.0",
     "core-js": "~3.8.3",
     "dayjs": "~1.10.4",
     "lodash-es": "~4.17.20",
@@ -38,19 +38,19 @@
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
     "roboto-fontface": "~0.10.0",
-    "swrv": "~0.9.2",
+    "swrv": "~0.9.3",
     "vue": "~2.6.12",
     "vue-i18n": "~8.22.4",
     "vue-router": "~3.5.1",
     "vuetify": "~2.4.3",
     "vuex": "~3.6.2",
-    "xe-utils": "~3.1.6"
+    "xe-utils": "~3.1.7"
   },
   "devDependencies": {
     "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.13.0",
+    "@modyqyw/fabric": "~1.13.2",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.22",
     "@vue/cli-plugin-babel": "~4.5.11",
@@ -63,19 +63,19 @@
     "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.3",
     "compression-webpack-plugin": "~6.1.1",
-    "electron": "~8.5.5",
+    "electron": "~11.2.1",
     "electron-devtools-installer": "~3.1.1",
-    "eslint": "~7.18.0",
+    "eslint": "~7.19.0",
     "husky": "~4.3.8",
     "lint-staged": "~10.5.3",
     "markdownlint-cli": "~0.26.0",
     "npm-check-updates": "~11.1.1",
     "prettier": "~2.2.1",
-    "sass": "~1.32.5",
+    "sass": "~1.32.6",
     "sass-loader": "~10.1.1",
     "stylelint": "~13.9.0",
     "stylelint-webpack-plugin": "~2.1.1",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.6",
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "~2.1.0",
     "vue-template-compiler": "~2.6.12",
