--- a/package.json
+++ b/package.json
@@ -47,27 +47,27 @@
     "xe-utils": "~3.1.7"
   },
   "devDependencies": {
-    "@commitlint/cli": "~11.0.0",
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.13.2",
+    "@modyqyw/fabric": "~1.13.4",
     "@types/lodash-es": "~4.17.4",
-    "@types/node": "~14.14.22",
+    "@types/node": "~14.14.25",
     "@vue/cli-plugin-babel": "~4.5.11",
     "@vue/cli-plugin-eslint": "~4.5.11",
     "@vue/cli-plugin-unit-jest": "~4.5.11",
     "@vue/cli-plugin-router": "~4.5.11",
     "@vue/cli-plugin-vuex": "~4.5.11",
     "@vue/cli-service": "~4.5.11",
-    "@vue/test-utils": "~1.1.2",
+    "@vue/test-utils": "~1.1.3",
     "babel-eslint": "~10.1.0",
     "commitizen": "~4.2.3",
+    "commitlint": "~11.0.0",
     "compression-webpack-plugin": "~6.1.1",
-    "electron": "~11.2.1",
+    "electron": "~11.2.2",
     "electron-devtools-installer": "~3.1.1",
     "eslint": "~7.19.0",
     "husky": "~4.3.8",
-    "lint-staged": "~10.5.3",
+    "lint-staged": "~10.5.4",
     "markdownlint-cli": "~0.26.0",
     "npm-check-updates": "~11.1.1",
     "prettier": "~2.2.1",
@@ -79,7 +79,7 @@
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "~2.1.0",
     "vue-template-compiler": "~2.6.12",
-    "vuetify-loader": "~1.7.1"
+    "vuetify-loader": "~1.7.2"
   },
   "config": {
     "commitizen": {
