build: update deps

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check": "ncu",
     "commit": "cz",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit --coverage",
     "lint": "yarn lint:json && yarn lint:markdown && yarn lint:script && yarn lint:style && yarn lint:ls",
     "lint:json": "prettier ./**/*.json --write",
     "lint:markdown": "markdownlint . --fix",
@@ -27,7 +27,7 @@
     "@ant-design/colors": "~5.0.1",
     "@mdi/font": "~5.9.55",
     "@vue/composition-api": "~1.0.0-rc.1",
-    "@vueuse/core": "~4.0.12",
+    "@vueuse/core": "~4.1.0",
     "axios": "~0.21.1",
     "better-scroll": "~2.2.0",
     "core-js": "~3.8.3",
@@ -44,12 +44,12 @@
     "vue-router": "~3.5.1",
     "vuetify": "~2.4.3",
     "vuex": "~3.6.2",
-    "xe-utils": "~3.1.7"
+    "xe-utils": "~3.1.8"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
-    "@modyqyw/fabric": "~1.13.4",
+    "@modyqyw/fabric": "~1.14.0",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.25",
     "@vue/cli-plugin-babel": "~4.5.11",
@@ -63,7 +63,7 @@
     "commitizen": "~4.2.3",
     "commitlint": "~11.0.0",
     "compression-webpack-plugin": "~6.1.1",
-    "electron": "~11.2.2",
+    "electron": "~11.2.3",
     "electron-devtools-installer": "~3.1.1",
     "eslint": "~7.19.0",
     "husky": "~4.3.8",
