--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "@intlify/vue-i18n-loader": "~1.0.0",
     "@ls-lint/ls-lint": "~1.9.2",
     "@modyqyw/fabric": "~1.15.0",
+    "@types/jest": "~26.0.20",
     "@types/lodash-es": "~4.17.4",
-    "@types/node": "~14.14.26",
+    "@types/node": "~14.14.27",
     "@vue/cli-plugin-babel": "~4.5.11",
     "@vue/cli-plugin-eslint": "~4.5.11",
-    "@vue/cli-plugin-unit-jest": "~4.5.11",
     "@vue/cli-plugin-router": "~4.5.11",
+    "@vue/cli-plugin-unit-jest": "~4.5.11",
     "@vue/cli-plugin-vuex": "~4.5.11",
     "@vue/cli-service": "~4.5.11",
     "@vue/test-utils": "~1.1.3",
@@ -65,7 +66,7 @@
     "compression-webpack-plugin": "~6.1.1",
     "electron": "~11.2.3",
     "electron-devtools-installer": "~3.1.1",
-    "eslint": "~7.19.0",
+    "eslint": "~7.20.0",
     "husky": "~4.3.8",
     "lint-staged": "~10.5.4",
     "markdownlint-cli": "~0.26.0",
