feat: add ts support for further migration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "allowJs": true,
     "noEmit": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist", "dist_electron"]
 }
