chore: add composables dir to ls-lint config

--- a/.ls-lint.yml
+++ b/.ls-lint.yml
@@ -29,6 +29,9 @@ ls:
     .module.less: kebab-case
     .module.sass: kebab-case
     .module.scss: kebab-case
+  src/composables:
+    .js: camelCase
+    .ts: camelCase
   src/hooks:
     .js: camelCase
     .ts: camelCase
