build: update deps

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "better-scroll": "~2.2.1",
     "core-js": "~3.9.1",
     "dayjs": "~1.10.4",
-    "faker": "~5.4.0",
     "lodash-es": "~4.17.21",
+    "mockjs": "~1.1.0",
     "mitt": "~2.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
