build: update deps

--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
     "url": ""
   },
   "scripts": {
-    "dev": "vue-cli-service serve --mode development",
-    "staging-build": "vue-cli-service build --mode staging --report",
     "build": "vue-cli-service build --mode production --report",
-    "electron:dev": "vue-cli-service electron:serve",
-    "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l",
-    "electron:build": "vue-cli-service electron:build --report -m -w -l",
     "check": "ncu",
     "commit": "cz",
+    "dev": "vue-cli-service serve --mode development",
+    "electron:build": "vue-cli-service electron:build --report -m -w -l",
+    "electron:dev": "vue-cli-service electron:serve",
+    "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "test:unit": "vue-cli-service test:unit --coverage --passWithNoTests",
-    "lint": "yarn run lint:json && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
+    "lint": "yarn run lint:json && yarn run lint:ls && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
     "lint:json": "prettier ./**/*.json --write --ignore-path=.gitignore",
+    "lint:ls": "ls-lint .",
     "lint:markdown": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:script": "vue-cli-service lint --fix",
     "lint:style": "stylelint ./**/*.{css,less,sass,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "prepare": "is-ci || husky install"
+    "prepare": "is-ci || husky install",
+    "staging-build": "vue-cli-service build --mode staging --report",
+    "test:unit": "vue-cli-service test:unit --coverage --passWithNoTests"
   },
   "main": "background.js",
   "dependencies": {
     "@mdi/font": "~5.9.55",
     "@modyqyw/utils": "~0.6.0",
-    "@vue/composition-api": "~1.0.0-rc.13",
-    "@vueuse/core": "~5.1.3",
-    "@vueuse/electron": "~5.1.3",
+    "@vue/composition-api": "~1.0.4",
+    "@vueuse/core": "~5.2.0",
+    "@vueuse/electron": "~5.2.0",
     "@vueuse/gesture": "~1.0.0",
-    "@vueuse/integrations": "~5.1.3",
+    "@vueuse/integrations": "~5.2.0",
     "@vueuse/motion": "~1.5.6",
     "axios": "~0.21.1",
     "axios-cache-adapter": "~2.7.3",
@@ -52,20 +53,21 @@
     "roboto-fontface": "~0.10.0",
     "statuses": "~2.0.1",
     "vue": "~2.6.14",
-    "vue-i18n": "8.24.5",
+    "vue-i18n": "~8.25.0",
     "vue-router": "~3.5.2",
-    "vuetify": "~2.5.6",
+    "vuetify": "~2.5.7",
     "vuex": "~3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.14.6",
+    "@babel/core": "~7.14.8",
     "@babel/eslint-parser": "~7.14.7",
-    "@commitlint/cli": "~12.1.4",
+    "@commitlint/cli": "~13.1.0",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~2.6.1",
+    "@ls-lint/ls-lint": "~1.10.0",
+    "@modyqyw/fabric": "~2.9.0-3",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.24",
-    "@types/node": "~16.3.1",
+    "@types/node": "~16.4.3",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@vue/cli-plugin-babel": "~5.0.0-beta.2",
@@ -74,22 +76,22 @@
     "@vue/cli-plugin-unit-jest": "~5.0.0-beta.2",
     "@vue/cli-plugin-vuex": "~5.0.0-beta.2",
     "@vue/cli-service": "~5.0.0-beta.2",
-    "@vue/test-utils": "~1.2.1",
+    "@vue/test-utils": "~1.2.2",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~8.0.1",
-    "electron": "13.1.6",
+    "electron": "13.1.7",
     "electron-devtools-installer": "~3.2.0",
-    "eslint": "~7.30.0",
+    "eslint": "~7.31.0",
     "husky": "~7.0.1",
     "is-ci": "~3.0.0",
-    "lint-staged": "~11.0.0",
-    "markdownlint-cli": "~0.27.1",
-    "npm-check-updates": "~11.8.2",
+    "lint-staged": "~11.1.1",
+    "markdownlint-cli": "~0.28.1",
+    "npm-check-updates": "~11.8.3",
     "prettier": "~2.3.2",
-    "sass": "~1.35.2",
+    "sass": "~1.32.13",
     "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
-    "stylelint-webpack-plugin": "~2.2.2",
+    "stylelint-webpack-plugin": "~3.0.1",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-jest": "~3.0.7",
