build: add iconify

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@iconify/vue2": "~1.0.0-beta.1",
     "@mdi/font": "~5.9.55",
     "@modyqyw/utils": "~0.6.0",
     "@vue/composition-api": "~1.0.4",
