build: update deps

--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "electron:dev": "vue-cli-service electron:serve",
     "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "lint": "yarn run lint:json && yarn run lint:ls && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
+    "lint": "yarn run lint:json && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
     "lint:json": "prettier ./**/*.json --write --ignore-path=.gitignore",
-    "lint:ls": "ls-lint .",
     "lint:markdown": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:script": "vue-cli-service lint --fix",
     "lint:style": "stylelint ./**/*.{css,less,sass,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
@@ -45,7 +44,7 @@
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.19.0",
     "axios-retry": "~3.1.9",
-    "core-js": "~3.15.2",
+    "core-js": "~3.16.0",
     "dayjs": "~1.10.6",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
@@ -66,11 +65,10 @@
     "@babel/eslint-parser": "~7.14.7",
     "@commitlint/cli": "~13.1.0",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@ls-lint/ls-lint": "~1.10.0",
-    "@modyqyw/fabric": "~2.9.0-4",
+    "@modyqyw/fabric": "~2.9.0",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.24",
-    "@types/node": "~16.4.6",
+    "@types/node": "~16.4.7",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@vue/cli-plugin-babel": "~5.0.0-beta.2",
