build: update deps

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "prepare": "is-ci || husky install",
+    "release": "release-it",
     "staging-build": "vue-cli-service build --mode staging --report",
     "test:unit": "vue-cli-service test:unit --coverage --passWithNoTests"
   },
@@ -65,7 +66,7 @@
     "@babel/eslint-parser": "~7.15.0",
     "@commitlint/cli": "~13.1.0",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.0.0-3",
+    "@modyqyw/fabric": "~3.0.0-4",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~26.0.24",
     "@types/node": "~16.4.13",
@@ -91,6 +92,7 @@
     "markdownlint-cli": "~0.28.1",
     "npm-check-updates": "~11.8.3",
     "prettier": "~2.3.2",
+    "release-it": "~14.11.3",
     "sass": "~1.32.13",
     "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
