build: update deps

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "electron:dev": "vue-cli-service electron:serve",
     "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "lint": "yarn run lint:json && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
+    "lint": "pnpm run lint:json && pnpm run lint:markdown && pnpm run lint:script && pnpm run lint:style",
     "lint:json": "prettier ./**/*.json --write --ignore-path=.gitignore",
     "lint:markdown": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:script": "vue-cli-service lint --fix",
@@ -69,7 +69,7 @@
     "@modyqyw/fabric": "~3.0.2",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/jest": "~27.0.1",
-    "@types/node": "~16.6.1",
+    "@types/node": "~16.6.2",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~4.29.2",
