--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
+shamefully-hoist=true
+
 registry=https://registry.npm.taobao.org
 chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver/
 electron_builder_binaries_mirror=https://npm.taobao.org/mirrors/electron-builder-binaries/
